Fix scalafm on Scala3.

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -19,3 +19,11 @@ rewrite.rules = [
 ]
 newlines.afterCurlyLambda = preserve
 newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
+
+fileOverride {
+  "glob:**/scala-3/src/main/scala/**" {
+    runner.dialect = scala3
+    rewrite.scala3.convertToNewSyntax = true
+    rewrite.scala3.removeOptionalBraces = true
+  }
+}
