--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,6 +129,201 @@ jobs:
         if: matrix.java == 'temurin@8' && matrix.os == 'ubuntu-latest'
         run: sbt 'project ${{ matrix.project }}' '++ ${{ matrix.scala }}' doc
 
+      - name: Make target directories
+        if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v'))
+        run: mkdir -p modules/shapes/.js/target modules/literal/.native/target modules/numbers-testing/.jvm/target modules/testing/jvm/target modules/extras/js/target modules/scalafix/internal/input/target modules/extras/native/target modules/scalafix/internal/tests/target modules/generic/jvm/target modules/shapes/.native/target target modules/generic-simple/.jvm/target modules/numbers/native/target modules/hygiene/native/target modules/literal/.jvm/target modules/parser/jvm/target modules/literal/.js/target .js/target modules/parser/js/target modules/scalajs/target modules/core/native/target docs/target modules/shapes/.jvm/target modules/testing/native/target modules/scalafix/internal/output/target modules/generic-simple/.native/target modules/jawn/jvm/target modules/parser/native/target modules/core/js/target modules/hygiene/jvm/target modules/testing/js/target modules/generic/js/target modules/jawn/js/target modules/numbers-testing/.native/target modules/hygiene/js/target modules/core/jvm/target modules/pointer-literal/.js/target modules/tests/js/target modules/refined/native/target modules/numbers-testing/.js/target .jvm/target modules/scalafix/internal/rules/target .native/target modules/pointer/.js/target modules/refined/js/target modules/pointer/.jvm/target modules/pointer-literal/.jvm/target modules/pointer-literal/.native/target modules/scodec/jvm/target modules/scodec/js/target modules/refined/jvm/target modules/scalajs-java-time-test/target modules/jawn/native/target modules/numbers/js/target modules/pointer/.native/target modules/tests/jvm/target modules/extras/jvm/target modules/generic/native/target modules/generic-simple/.js/target modules/scodec/native/target modules/numbers/jvm/target modules/benchmark/target modules/tests/native/target project/target
+
+      - name: Compress target directories
+        if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v'))
+        run: tar cf targets.tar modules/shapes/.js/target modules/literal/.native/target modules/numbers-testing/.jvm/target modules/testing/jvm/target modules/extras/js/target modules/scalafix/internal/input/target modules/extras/native/target modules/scalafix/internal/tests/target modules/generic/jvm/target modules/shapes/.native/target target modules/generic-simple/.jvm/target modules/numbers/native/target modules/hygiene/native/target modules/literal/.jvm/target modules/parser/jvm/target modules/literal/.js/target .js/target modules/parser/js/target modules/scalajs/target modules/core/native/target docs/target modules/shapes/.jvm/target modules/testing/native/target modules/scalafix/internal/output/target modules/generic-simple/.native/target modules/jawn/jvm/target modules/parser/native/target modules/core/js/target modules/hygiene/jvm/target modules/testing/js/target modules/generic/js/target modules/jawn/js/target modules/numbers-testing/.native/target modules/hygiene/js/target modules/core/jvm/target modules/pointer-literal/.js/target modules/tests/js/target modules/refined/native/target modules/numbers-testing/.js/target .jvm/target modules/scalafix/internal/rules/target .native/target modules/pointer/.js/target modules/refined/js/target modules/pointer/.jvm/target modules/pointer-literal/.jvm/target modules/pointer-literal/.native/target modules/scodec/jvm/target modules/scodec/js/target modules/refined/jvm/target modules/scalajs-java-time-test/target modules/jawn/native/target modules/numbers/js/target modules/pointer/.native/target modules/tests/jvm/target modules/extras/jvm/target modules/generic/native/target modules/generic-simple/.js/target modules/scodec/native/target modules/numbers/jvm/target modules/benchmark/target modules/tests/native/target project/target
+
+      - name: Upload target directories
+        if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v'))
+        uses: actions/upload-artifact@v3
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-${{ matrix.scala }}-${{ matrix.project }}
+          path: targets.tar
+
+  publish:
+    name: Publish Artifacts
+    needs: [build]
+    if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v'))
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        scala: [2.13.8]
+        java: [temurin@8]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout current branch (full)
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Download Java (temurin@8)
+        id: download-java-temurin-8
+        if: matrix.java == 'temurin@8'
+        uses: typelevel/download-java@v2
+        with:
+          distribution: temurin
+          java-version: 8
+
+      - name: Setup Java (temurin@8)
+        if: matrix.java == 'temurin@8'
+        uses: actions/setup-java@v3
+        with:
+          distribution: jdkfile
+          java-version: 8
+          jdkFile: ${{ steps.download-java-temurin-8.outputs.jdkFile }}
+
+      - name: Download Java (temurin@11)
+        id: download-java-temurin-11
+        if: matrix.java == 'temurin@11'
+        uses: typelevel/download-java@v2
+        with:
+          distribution: temurin
+          java-version: 11
+
+      - name: Setup Java (temurin@11)
+        if: matrix.java == 'temurin@11'
+        uses: actions/setup-java@v3
+        with:
+          distribution: jdkfile
+          java-version: 11
+          jdkFile: ${{ steps.download-java-temurin-11.outputs.jdkFile }}
+
+      - name: Download Java (temurin@17)
+        id: download-java-temurin-17
+        if: matrix.java == 'temurin@17'
+        uses: typelevel/download-java@v2
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: Setup Java (temurin@17)
+        if: matrix.java == 'temurin@17'
+        uses: actions/setup-java@v3
+        with:
+          distribution: jdkfile
+          java-version: 17
+          jdkFile: ${{ steps.download-java-temurin-17.outputs.jdkFile }}
+
+      - name: Cache sbt
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.sbt
+            ~/.ivy2/cache
+            ~/.coursier/cache/v1
+            ~/.cache/coursier/v1
+            ~/AppData/Local/Coursier/Cache/v1
+            ~/Library/Caches/Coursier/v1
+          key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
+
+      - name: Download target directories (3.2.1, rootJS)
+        uses: actions/download-artifact@v3
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-3.2.1-rootJS
+
+      - name: Inflate target directories (3.2.1, rootJS)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (3.2.1, rootJVM)
+        uses: actions/download-artifact@v3
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-3.2.1-rootJVM
+
+      - name: Inflate target directories (3.2.1, rootJVM)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (3.2.1, rootNative)
+        uses: actions/download-artifact@v3
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-3.2.1-rootNative
+
+      - name: Inflate target directories (3.2.1, rootNative)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (2.12.15, rootJS)
+        uses: actions/download-artifact@v3
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.12.15-rootJS
+
+      - name: Inflate target directories (2.12.15, rootJS)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (2.12.15, rootJVM)
+        uses: actions/download-artifact@v3
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.12.15-rootJVM
+
+      - name: Inflate target directories (2.12.15, rootJVM)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (2.12.15, rootNative)
+        uses: actions/download-artifact@v3
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.12.15-rootNative
+
+      - name: Inflate target directories (2.12.15, rootNative)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (2.13.8, rootJS)
+        uses: actions/download-artifact@v3
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.13.8-rootJS
+
+      - name: Inflate target directories (2.13.8, rootJS)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (2.13.8, rootJVM)
+        uses: actions/download-artifact@v3
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.13.8-rootJVM
+
+      - name: Inflate target directories (2.13.8, rootJVM)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (2.13.8, rootNative)
+        uses: actions/download-artifact@v3
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.13.8-rootNative
+
+      - name: Inflate target directories (2.13.8, rootNative)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Import signing key
+        if: env.PGP_SECRET != '' && env.PGP_PASSPHRASE == ''
+        run: echo $PGP_SECRET | base64 -di | gpg --import
+
+      - name: Import signing key and strip passphrase
+        if: env.PGP_SECRET != '' && env.PGP_PASSPHRASE != ''
+        run: |
+          echo "$PGP_SECRET" | base64 -di > /tmp/signing-key.gpg
+          echo "$PGP_PASSPHRASE" | gpg --pinentry-mode loopback --passphrase-fd 0 --import /tmp/signing-key.gpg
+          (echo "$PGP_PASSPHRASE"; echo; echo) | gpg --command-fd 0 --pinentry-mode loopback --change-passphrase $(gpg --list-secret-keys --with-colons 2> /dev/null | grep '^sec:' | cut --delimiter ':' --fields 5 | tail -n 1)
+
+      - name: Publish
+        run: sbt '++ ${{ matrix.scala }}' tlRelease
+
   scalafmt:
     name: Scalafmt and Scalastyle
     strategy:
