make directory.conf more idiomatic

--- a/docs/codecs/directory.conf
+++ b/docs/codecs/directory.conf
@@ -1,8 +1,9 @@
+laika.title = Encoding and Decoding
 laika.navigationOrder = [
-  semiauto-derivation.md,
-  auto-derivation.md,
-  custom-codecs.md,
-  adt.md,
-  testing.md,
-  known-issues.md,
+  semiauto-derivation.md
+  auto-derivation.md
+  custom-codecs.md
+  adt.md
+  testing.md
+  known-issues.md
 ]
