--- a/docs/directory.conf
+++ b/docs/directory.conf
@@ -1,9 +1,10 @@
+laika.title = Home
 laika.navigationOrder = [
-  README.md,
-  quickstart.md,
-  parsing.md,
-  cursors.md,
-  codecs,
-  optics.md,
-  performance.md,
+  README.md
+  quickstart.md
+  parsing.md
+  cursors.md
+  codecs
+  optics.md
+  performance.md
 ]
